fix responsive issue on tablet

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -48,6 +48,6 @@ $container-max-widths: (
     text-transform: uppercase;
 }
 
-$break-table: 1024px;
+$break-tablet: 1024px;
 $break-medium: 767px;
 $break-small: 420px;
