--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,14 +68,11 @@ body {
                     margin: 0 25px;
                     position: relative;
 
-                    @media (max-width:$break-medium) {
-                        margin: 10px 0;
-                    }
-
+                    
                     .nav-link {
                         @extend %link-bold;
                     }
-
+                    
                     .active {
                         &:after {
                             background-color: $darkgrey;
@@ -86,16 +83,22 @@ body {
                             bottom: -15px;
                             left: 0;
                             transform: skew(-34deg);
-
-                            @media (max-width: $break-medium) {
+                            
+                            @media (max-width: $break-tablet) {
                                 display: none;
                             }
                         }
-
-                        @media (max-width: $break-medium) {
+                        
+                        @media (max-width: $break-tablet) {
                             color: $red;
                         }
                     }
+
+
+                    @media (max-width:$break-tablet) {
+                        margin: 10px 0;
+                    }
+                    
                 }
             }
            
@@ -201,7 +204,8 @@ body {
                 margin: 40px 0;
                 width: 55%;
 
-                @media (max-width: $break-medium) {
+
+                @media (max-width: $break-tablet) {
                     width: 100%;
                 }
 
@@ -241,7 +245,7 @@ body {
                     li {
                         border: 1px solid $grey;
                             padding: 15px 20px;
-                        @media (max-width:$break-medium) {
+                        @media (max-width:$break-tablet) {
                             margin-bottom: 12px;
                         }
                         a {
@@ -406,7 +410,18 @@ body {
                             background-color: $grey;
                         }
                     }
+
+                    @media (max-width: $break-tablet) {
+                        width:100%;
+                        margin-bottom: 10px;
+                        text-align: center;
+                    }
                 }
+
+                @media (min-width: $break-medium) and (max-width: $break-tablet) {
+                    padding: 20px;
+                }
+
             }
         }
 
@@ -477,6 +492,11 @@ body {
 
             .logo {
                 margin-bottom: 20px;
+
+                @media (max-width:$break-medium) {
+                    display: block;
+                    text-align: center;
+                }
             }
 
             .social-media {
@@ -569,6 +589,11 @@ body {
                     text-transform: uppercase;
                     padding: 10px 25px;
                 }
+            }
+
+            @media (max-width:$break-medium) {
+                
+                text-align: center;
             }
         }
 
